--- a/网站 前端搭建.md
+++ b/网站 前端搭建.md
@@ -7,8 +7,12 @@
 盈利方式：
 
 1.  BBS商家广告
-2. BBS帮助帖子
-3. 自己 电子书资源介绍
-4. 帮助他人搭建费用
-5. 协助其他学校 搭建BBS
-6. 
+2.  BBS帮助帖子
+3.  自己 电子书资源介绍
+4.  帮助他人搭建费用
+5.  协助其他学校 搭建BBS
+
+运营：
+
+1. 投资股票
+2. 
